--- a/sample.tex
+++ b/sample.tex
@@ -1,6 +1,6 @@
 %\documentclass[margin=0pt]{standalone}
 %\usepackage{tikz}
-%\usetikzlibrary{arrows.meta}
+\usetikzlibrary{arrows.meta}
 
 \begin{document}
 
