Pull in the "erstat" method from upstream.  This fixes the issue with not finding the tikz libraries that are really pgflibrary files.  The way that tex resolves those is actually by not finding the file, and then checking for the pgf library file.

--- a/tikz_libs/chains.tex
+++ b/tikz_libs/chains.tex
@@ -1,6 +1,6 @@
 %\documentclass[margin=0pt]{standalone}
 %\usepackage{tikz}
-\usetikzlibrary{chains,scopes}
+\usetikzlibrary{chains}
 
 \begin{document}
 
